fixed spacing for breadbcrumb icon

--- a/src/_css/theme/layout.pcss
+++ b/src/_css/theme/layout.pcss
@@ -106,9 +106,6 @@
 .c-coop-breadcrumb li + li::before {
   content: '\279D';
   display: inline-block;
-  font-weight: normal;
-  width: 12px;
-  height: 20px;
 }
 
 .side-nav__link-toggle .coop-side-nav {
